# PY130

./: README  arguments_and_parameters.py  closures_practice_problems.py  decorator_test.py  example.txt  file_examples.py  generator_practice_problems.py  higher_order_funcs_practice.py  iterable_unpacking.py  lambda_practice.py  my_proj  output.txt  review.txt
Exercises/Advanced/: longest_sentence.py
Exercises/Easy1/: basic_generator_function.py  concatenate_strings.py  even_numbers.py  generator_with_user_input.py  lengths_of_strings.py  nested_generator_expressions.py  product_of_numbers.py  remove_none_values.py  reverse_string.py  square_numbers.py
Exercises/Easy2/: build_profile.py  capture_all_the_rest.py  concatenate_any_number_of_strings.py  create_user.py  default_to_a_period.py  display_info.py  ignore_middle.py  (+2 more)
Higher_Order_Functions/: question_1.py  question_2.py  question_3.py  question_4.py
PY139/: closures.py  factory_function.py  generator_practice_problems.py  higher_order_functions_practice_problems.py  pfa.py  scratchpad.py  study_guide.txt  study_guide_notebook.ipynb  study_guide_questions.ipynb  test_file.txt  test_open.py
Packaging/: creating_packages.ipynb
car/: car.py  test_car.py
my_proj/: pyproject.toml
testing/: assertions.py  test_add.py
todolist/: .coverage  pyvenv.cfg  test_todo.py  test_todolist.py  todo.py  todolist.py  todolist_new.py  todolist_vd.py
todolist_package/: pyproject.toml
todolist_package/src/todolist_vd141.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
todolist_package/tests/: test_todolist.py
(+59 files in other folders)
