[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "todolist_vd141"
version = "0.1.0"
authors = [
    {name = "Victor D", email = "victor.dinh141@gmail.com"},
]
description = "A fantastic todo list application."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    # More classifiers can be found at
]
dependencies = []

[project.urls]
Homepage = "https://github.com/vd141/todolist"
Issues = "https://github.com/vd141/todolist/issues"
